Fixed picture of me on the 'Bio' page is too big on iPhone Safari in landscape mode.

--- a/src/app/bio/page.module.css
+++ b/src/app/bio/page.module.css
@@ -5,7 +5,9 @@
     margin: auto;
 }
 
-@media only screen and (min-width: 52em) and (orientation: landscape) {
+@media only screen
+ /* and (min-width: 52em) */
+ and (orientation: landscape) {
     .MePic {
         width: 16em;
         height: 12em;
